# Python-WEB-8-RabbitMQ-

./: connect.py  models.py  producer.py  pyproject.toml
