[tool.poetry]
name = "python-web-8-rabbitmq-"
version = "0.1.0"
description = ""
authors = ["Ruslan2512 <ruslansirenko25@gmail.com>"]
readme = "README.md"
packages = [{include = "python_web_8_rabbitmq_"}]

[tool.poetry.dependencies]
python = "^3.8"
pika = "^1.3.2"
datetime = "^5.1"
mongoengine = "^0.27.0"
faker = "^18.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
